# agentimize

./: .env.example  .gitignore  README.md  agentimize_schema.json  deliverable.docx  pyproject.toml  requirements.txt
agentimize/: __init__.py  cli.py
agentimize/applicator/: __init__.py  patcher.py
agentimize/dashboard/: __init__.py  api.py
agentimize/dashboard/static/: index.html
agentimize/judge/: __init__.py  llm_judge.py
agentimize/optimizer/: __init__.py  solver.py
agentimize/proxy/: __init__.py  server.py
agentimize/tracer/: __init__.py  graph_builder.py  models.py
api/: index.py
test_agent/: __init__.py  nyc_apartment_agent.py
